--- a/portfolio.html
+++ b/portfolio.html
@@ -313,7 +313,7 @@
             <input type="email" name="email" placeholder="E-mail" />
             <button type="submit" class="followbutt">
               Подписаться<svg class="followmedia" width="24px" height="24px">
-                <use href="./img/symbol1-defs.svg#icon-iconsend"></use>
+                <use href="./img/symbol-defs.svg#icon-iconsend"></use>
               </svg>
             </button>
           </div>
